# pidmx

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  fixturePresets.bundle  main.cpp  show.pidmxs
.github/workflows/: build.yml
glad/src/: glad.c
js/: exec.cpp  exec.h  globals.h  init.cpp  init.h  js.h  jsUtils.h  template.cpp
js/impl/: console.cpp  console.h  require.cpp
module/: Makefile
module/src/: constants.h  dmxmodule.c  uart.c  uart.h
resources/fixtures/: fixturePresets.bundle  fixtures.bundle
rewind/: CMakeLists.txt
rewind/src/: rewind.cpp  rewind.h  rewind_test.cpp
src/: ImGuiExt.cpp  ImGuiExt.h  Panel.h  PanelChannelEditor.cpp  PanelChannelEditor.h  PanelChannelMonitor.cpp  PanelChannelMonitor.h  PanelConsole.cpp  PanelConsole.h  PanelFixtureMap.cpp  PanelFixtureMap.h  PanelPatch.cpp  PanelPatch.h  Universe.cpp  Universe.h  pidmx_utils.cpp  pidmx_utils.h
src/engine/: Collection.h  Console.cpp  Console.h  Engine.cpp  Engine.h  EngineCereal.h  Fixture.cpp  Fixture.h  JsTools.cpp  JsTools.h  Modulator.cpp  Modulator.h  Object.cpp  Object.h  Parameter.cpp  Parameter.h  Showfile.h  Universe.cpp  Universe.h
src/engine/command/: CommandBlackboard.h  CommandBuffer.cpp  CommandBuffer.h  CommandFixture.h  CommandFixtureCollection.h  ICommand.h
src/engine/core/: CallablePreset.h  Collections.h  Engine.cpp  Engine.h  EngineAction.h  Fixture.cpp  Fixture.h  FixtureCollection.cpp  FixtureCollection.h  FixturePreset.cpp  FixturePreset.h  IIdentifiable.cpp  IIdentifiable.h  ISer.h  ISerializable.h  NbtFileIO.h  NbtSerializer.h  Programmer.cpp  Programmer.h  Show.cpp  Show.h  ShowData.cpp  ShowData.h  Utils.h
src/engine/ui/: BlackboardItem.cpp  BlackboardItem.h  BlackboardItemCollection.cpp  BlackboardItemCollection.h  BlackboardPanel.cpp  BlackboardPanel.h  ImGuiExt.cpp  ImGuiExt.h  MainPanel.cpp  MainPanel.h  Panel.cpp  Panel.h  PanelConsole.cpp  PanelConsole.h  PanelFixturePresetEditor.cpp  PanelFixturePresetEditor.h  PanelOperators.cpp  PanelOperators.h  PanelPatchFixtures.cpp  PanelPatchFixtures.h  PatchFixturesPanel.cpp  PatchFixturesPanel.h  Tools.cpp  Tools.h
src/engine/ui/blackboard/: Item.cpp  Item.h  ItemCollection.cpp  ItemCollection.h  ItemFixtureSheet.cpp  ItemFixtureSheet.h  ItemGroups.cpp  ItemGroups.h  ItemParameters.cpp  ItemParameters.h  ItemPresets.cpp  ItemPresets.h  ItemSaveLoad.h  Panel.cpp  Panel.h
src/glad/include/glad/: glad.h
src/js/: exec.cpp  exec.h  globals.cpp  globals.h  init.cpp  init.h  js.h  jsUtils.h  template.cpp  template.h  v8.h  v8ObjectInterface.cpp  v8ObjectInterface.h
src/js/impl/: console.cpp  console.h  impl.h  require.cpp  require.h
